--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,6 @@
       </div>
 
       <div class="user-details hidden">
-        
         <div id="username-detail">Username: </div>
         <div id="name-detail">Name: </div>
         <div id="honor-detail">Honor: </div>
@@ -36,6 +35,13 @@
         <div id="clan-detail">Clan: </div>
         <div id="leaderboard-detail">Leaderboard position: </div>
         <div id="languages-detail">Languages: </div>
+      </div>
+
+      <div class="next-kata-details hidden">
+        <div id="kata-name">Name: </div>
+        <div id="kata-rank">Rank: </div>
+        <div id="kata-description">Description: </div>
+        <button id="train-next" class="btn btn-lg btn-primary btn-block">Train</button>      
       </div>
     </div>
     <script src="index.js"></script>
