--- a/app/index.html
+++ b/app/index.html
@@ -13,35 +13,30 @@
 
       <div class='user-login'>
         <form class="form-signin">
-          <h2 class="form-signin-heading">Please sign in</h2>
+          <h2 class="form-signin-heading">electronWars</h2>
           <label for="username" class="sr-only">Codewars Username</label>
           <input id="username" class="form-control" placeholder="Codewars username" required autofocus>
           <label for="apikey" class="sr-only">API key</label>
           <input type="password" id="apikey" class="form-control" placeholder="Codewars API key" required>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" value="remember-me"> Remember me
-            </label>
-          </div>
           <button id="getUserBtn" class="btn btn-lg btn-primary btn-block" data-loading-text="Loading..." type="submit">Sign in</button>
         </form>
       </div>
 
       <div class="user-details hidden">
-        <div id="username-detail">Username: </div>
-        <div id="name-detail">Name: </div>
-        <div id="honor-detail">Honor: </div>
-        <div id="completed-detail">Total completed Kata: </div>
-        <div id="clan-detail">Clan: </div>
-        <div id="leaderboard-detail">Leaderboard position: </div>
-        <div id="languages-detail">Languages: </div>
+        <div class="stat" id="username-detail"><b>Username:</b></div>
+        <div class="stat" id="name-detail"><b>Name:</b></div>
+        <div class="stat" id="honor-detail"><b>Honor:</b></div>
+        <div class="stat" id="completed-detail"><b>Total completed Kata:</b></div>
+        <div class="stat" id="clan-detail"><b>Clan:</b></div>
+        <div class="stat" id="leaderboard-detail"><b>Leaderboard position:</b></div>
+        <div class="stat" id="languages-detail"><b>Languages:</b></div>
       </div>
-
+      <hr class="divide-line hidden">
       <div class="next-kata-details hidden">
-        <div id="kata-name">Name: </div>
-        <div id="kata-rank">Rank: </div>
-        <div id="kata-description">Description: </div>
-        <button id="train-next" class="btn btn-lg btn-primary btn-block">Train</button>      
+        <div class="stat" id="kata-name"><b>Name:</b></div>
+        <div class="stat" id="kata-rank"><b>Rank:</b></div>
+        <div class="stat" id="kata-description"><b>Description:</b></div>
+        <button id="train-next" class="btn btn-lg btn-primary btn-block">Train</button>
       </div>
     </div>
     <script src="index.js"></script>
