First stage of adding code editor

--- a/app/index.html
+++ b/app/index.html
@@ -33,9 +33,9 @@
       </div>
       <hr class="divide-line hidden">
       <div class="next-kata-details hidden">
-        <div class="stat" id="kata-name"><b>Name:</b></div>
-        <div class="stat" id="kata-rank"><b>Rank:</b></div>
-        <div class="stat" id="kata-description"><b>Description:</b></div>
+        <div class="stat kata-name"><b>Name:</b></div>
+        <div class="stat kata-rank"><b>Rank:</b></div>
+        <div class="stat kata-description"><b>Description:</b></div>
         <button id="train-next" class="btn btn-lg btn-primary btn-block">Train</button>
       </div>
     </div>
